# archility

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  pyproject.toml  setup.sh
.github/workflows/: ci.yml  python-publish.yml
config/: downstream-repos.toml
config/tachometer/: profile.toml
docs/: contributor-architecture-blueprint.md  portfolio-architecture-toolchain.md
docs/diagrams/: archility-audit-flow.puml  python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
src/archility/: __init__.py  __main__.py  audit.py  cli.py  generate.py  render.py
tests/: test_audit.py  test_dyno_integration.py  test_generate.py  test_render.py
