[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "archility"
version = "0.1.0"
description = "Architecture inventory and blueprint audit helpers for portfolio repositories."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Codex"},
]
dependencies = []

[project.scripts]
archility = "archility.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
