[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "archility"
version = "0.1.0"
description = "Architecture inventory and blueprint audit helpers for portfolio repositories."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Codex"},
]
dependencies = []

[project.scripts]
archility = "archility.cli:main"


[project.optional-dependencies]
dev = [
    "pytest>=8",
    "dyno_lab @ git+https://github.com/casonk/dyno-lab.git",
]
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line-too-long — handled by formatter
    "B008",   # function-call in default args — too noisy for existing code
    "SIM108", # ternary instead of if/else — too aggressive for readability
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
